--- a/docs/libcurl/curl_multi_setopt.3
+++ b/docs/libcurl/curl_multi_setopt.3
@@ -63,6 +63,8 @@ See \fICURLMOPT_PUSHDATA(3)\fP
 See \fICURLMOPT_SOCKETFUNCTION(3)\fP
 .IP CURLMOPT_SOCKETDATA
 See \fICURLMOPT_SOCKETDATA(3)\fP
+.IP CURLMOPT_STREAM_WINDOW_SIZE
+See \fICURLMOPT_STREAM_WINDOW_SIZE(3)\fP
 .IP CURLMOPT_TIMERFUNCTION
 See \fICURLMOPT_TIMERFUNCTION(3)\fP
 .IP CURLMOPT_TIMERDATA
