--- a/docs/libcurl/opts/CURLOPT_STREAM_WINDOW_SIZE.3
+++ b/docs/libcurl/opts/CURLOPT_STREAM_WINDOW_SIZE.3
@@ -20,15 +20,15 @@
 .\" *
 .\" **************************************************************************
 .\"
-.TH CURLMOPT_STREAM_WINDOW_SIZE 3 "02 May 2021" "libcurl 7.77.0" "curl_multi_setopt options"
+.TH CURLOPT_STREAM_WINDOW_SIZE 3 "02 May 2021" "libcurl 7.77.0" "curl_easy_setopt options"
 .SH NAME
-CURLMOPT_STREAM_WINDOW_SIZE \- set stream window size for http2
+CURLOPT_STREAM_WINDOW_SIZE \- set stream window size for http2
 .SH SYNOPSIS
 .nf
 #include <curl/curl.h>
 
-CURLMcode curl_multi_setopt(CURLM *handle, CURLMOPT_STREAM_WINDOW_SIZE,
-                            long size);
+CURLMcode curl_easy_setopt(CURL *handle, CURLOPT_STREAM_WINDOW_SIZE,
+                           long size);
 .fi
 .SH DESCRIPTION
 Pass a long indicating the sender's HTTP/2 initial stream window \fBsize\fP in
@@ -36,8 +36,9 @@ bytes. This setting affects the initial window size of all streams. When using
 \fIcurl_easy_pause(3)\fP , this value is also the maximum number of bytes libcurl
 has to buffer for a paused stream.
 
-This option is for the multi handle's use only. When using the easy interface,
-you should instead use the \fICURLOPT_STREAM_WINDOW_SIZE(3)\fP option.
+If you add this easy handle to a multi handle, this setting is not
+acknowledged, and you must instead use \fIcurl_multi_setopt(3)\fP and the
+\fICURLMOPT_STREAM_WINDOW_SIZE(3)\fP option.
 
 Valid values range from 1 to 2147483647 (2^31 - 1).
 .SH DEFAULT
@@ -46,15 +47,16 @@ Valid values range from 1 to 2147483647 (2^31 - 1).
 HTTP/2
 .SH EXAMPLE
 .nf
-  CURLM *m = curl_multi_init();
+  CURL *curl = curl_easy_init();
   /* set stream window size to HTTP/2 default 2^16-1 */
-  curl_multi_setopt(m, CURLMOPT_STREAM_WINDOW_SIZE, 65535L);
+  curl_easy_setopt(curl, CURLOPT_STREAM_WINDOW_SIZE, 65535L);
 .fi
 .SH AVAILABILITY
 Added in 7.77.0
 .SH RETURN VALUE
-Returns CURLM_OK of the option is supported and window size is within range,
-CURLM_BAD_FUNCTION_ARGUMENT if not within range. Returns CURLM_UNKNOWN_OPTION
+
+Returns CURLE_OK of the option is supported and window size is within range,
+CURLE_BAD_FUNCTION_ARGUMENT if not within range. Returns CURLE_UNKNOWN_OPTION
 if the option is not supported.
 .SH "SEE ALSO"
-.BR curl_easy_pause "(3), " CURLOPT_STREAM_WINDOW_SIZE "(3)"
+.BR curl_easy_pause "(3), " CURLMOPT_STREAM_WINDOW_SIZE "(3)"
